--- a/src/app/components/bookmarks/bookmarks.component.html
+++ b/src/app/components/bookmarks/bookmarks.component.html
@@ -6,7 +6,7 @@
       favourites more easily.
     </p>
   </div>
-  <ul class="no-style">
+  <ul class="recipe-list no-style">
     <li *ngFor="let recipe of recipes; index as i">
       <recipe-preview [recipe]="recipe"></recipe-preview>
     </li>
