--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -143,7 +143,7 @@ ul.no-style {
   margin: calc(0px - var(--unit-small)) 0 0 calc(0px - var(--unit-small)) !important;
 
   > * {
-    flex: 1 1 auto;
+    flex: 1 1 0%;
     min-width: 15em;
     max-width: 30em;
 
