--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,9 +8,5 @@
     </p>
   </div>
 
-  <ul class="recipe-list no-style">
-    <li *ngFor="let recipe of recipes | async; index as i">
-      <recipe-preview [recipe]="recipe"></recipe-preview>
-    </li>
-  </ul>
+  <recipe-recipe-list [recipes]="recipes" [async]="true"></recipe-recipe-list>
 </div>
