--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -2,12 +2,14 @@
   <div>
     <p class="clickable" (click)="router.nav_home()">Recipe4You</p>
 
-    &nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;
 
     <a class="no-style" (click)="router.nav_backward()">
       <i class="fas" aria-hidden="true">&#xf053;</i>
     </a>
+
     &nbsp;&nbsp;
+
     <a class="no-style" (click)="router.nav_forward()">
       <i class="fas" aria-hidden="true">&#xf054;</i>
     </a>
@@ -16,14 +18,20 @@
   <div>
     <a id="install" class="no-style" hidden>
       <i class="fas" aria-hidden="true">&#xf019;</i>
-      &nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;
     </a>
 
     <a class="no-style" (click)="router.nav_create()">
       <i class="far" aria-hidden="true">&#xf0fe;</i>
     </a>
 
-    &nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;
+
+    <a class="no-style" (click)="router.nav_stars()">
+      <i class="fas" aria-hidden="true">&#xf005;</i>
+    </a>
+
+    &nbsp;&nbsp;
 
     <a class="no-style" (click)="router.nav_bookmarks()">
       <i class="fas" aria-hidden="true">&#xf02e;</i>
