--- a/src/app/components/recipe/recipe-view/recipe-view.component.html
+++ b/src/app/components/recipe/recipe-view/recipe-view.component.html
@@ -16,12 +16,17 @@
           <a class="no-style" (click)="router.nav_edit(recipe_id)">
             <i class="fas" aria-hidden="true">&#xf044;</i>
           </a>
+          &nbsp;
+          <a class="no-style" (click)="star()">
+            <i class="far" aria-hidden="true" *ngIf="!starred">&#xf005;</i>
+            <i class="fas" aria-hidden="true" *ngIf="starred">&#xf005;</i>
+          </a>
+          &nbsp;
+          <a class="no-style" (click)="bookmark()">
+            <i class="far" aria-hidden="true" *ngIf="!bookmarked">&#xf02e;</i>
+            <i class="fas" aria-hidden="true" *ngIf="bookmarked">&#xf02e;</i>
+          </a>
         </div>
-
-        <a class="no-style" (click)="bookmark()">
-          <i class="far" aria-hidden="true" *ngIf="!bookmarked">&#xf02e;</i>
-          <i class="fas" aria-hidden="true" *ngIf="bookmarked">&#xf02e;</i>
-        </a>
       </div>
 
       <div class="spacer"></div>
