--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -2,7 +2,7 @@
   <div class="flexbox tiny">
     <div>
       <div class="flexbox tiny">
-        <p class="clickable" (click)="router.nav_home()">Recipe4You</p>
+        <p class="clickable" (click)="router.nav_home()">Recipe4you</p>
 
         <a class="no-style" (click)="router.nav_backward()">
           <i class="fas" aria-hidden="true">&#xf053;</i>
