--- a/src/app/components/not-found/not-found-general/not-found-general.component.html
+++ b/src/app/components/not-found/not-found-general/not-found-general.component.html
@@ -1,3 +1,1 @@
-<div class="box nostyle">
-  <not-found>the page that you are searching for</not-found>
-</div>
+<not-found [what]="local.data.not_found.general"></not-found>
