--- a/src/app/components/auth/auth-profile/auth-profile.component.html
+++ b/src/app/components/auth/auth-profile/auth-profile.component.html
@@ -11,12 +11,19 @@
     </ng-template>
   </div>
   <ng-template #notLoggedIn>
-    <button class="tiny" (click)="router.nav_login()">login</button>
+    <button
+      class="tiny"
+      (click)="router.nav_login()"
+      [innerHtml]="local.data.auth.buttons.login.login"
+    ></button>
   </ng-template>
 
   <div class="popover box blur small" *ngIf="popover">
     <img [src]="auth.userPublicData.photoURL" alt="profile" />
     <h3>{{ auth.displayName_or_email }}</h3>
-    <button (click)="auth.signOut(); popover = false">logout</button>
+    <button
+      (click)="auth.signOut(); popover = false"
+      [innerHtml]="local.data.auth.buttons.logout.logout"
+    ></button>
   </div>
 </div>
