Multilang for recipes 💭

--- a/src/app/components/recipe/recipe-list/recipe-preview/recipe-preview.component.html
+++ b/src/app/components/recipe/recipe-list/recipe-preview/recipe-preview.component.html
@@ -1,9 +1,9 @@
 <div class="recipe box clickable" (click)="navigate_recipe()">
   <div class="text">
-    <h2>{{ recipe.name }}</h2>
+    <h2>{{ recipe.langs["en"].name }}</h2>
 
     <p>
-      {{ recipe.description }}
+      {{ recipe.langs["en"].description }}
     </p>
   </div>
 </div>
