--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -112,23 +112,23 @@ a {
     margin-bottom: 0;
   }
 }
-// .box-indent {
-//   padding-left: var(--unit-normal);
-//   padding-right: var(--unit-normal);
+.box-indent {
+  padding-left: var(--unit-normal);
+  padding-right: var(--unit-normal);
 
-//   &.tiny {
-//     padding-left: var(--unit-tiny);
-//     padding-right: var(--unit-tiny);
-//   }
-//   &.small {
-//     padding-left: var(--unit-small);
-//     padding-right: var(--unit-small);
-//   }
-//   &.large {
-//     padding-left: var(--unit-large);
-//     padding-right: var(--unit-large);
-//   }
-// }
+  &.tiny {
+    padding-left: var(--unit-tiny);
+    padding-right: var(--unit-tiny);
+  }
+  &.small {
+    padding-left: var(--unit-small);
+    padding-right: var(--unit-small);
+  }
+  &.large {
+    padding-left: var(--unit-large);
+    padding-right: var(--unit-large);
+  }
+}
 
 /* LIST */
 ul.no-style {
