--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -4,11 +4,11 @@
       <div class="flexbox tiny">
         <p class="clickable" (click)="router.nav_home()">Recipe4you</p>
 
-        <a class="no-style" (click)="router.nav_backward()">
+        <a class="nostyle" (click)="router.nav_backward()">
           <i class="fas" aria-hidden="true">&#xf053;</i>
         </a>
 
-        <a class="no-style" (click)="router.nav_forward()">
+        <a class="nostyle" (click)="router.nav_forward()">
           <i class="fas" aria-hidden="true">&#xf054;</i>
         </a>
       </div>
@@ -16,19 +16,19 @@
 
     <div>
       <div class="flexbox tiny">
-        <a id="install" class="no-style" hidden>
+        <a id="install" class="nostyle" hidden>
           <i class="fas" aria-hidden="true">&#xf019;</i>
         </a>
 
-        <a class="no-style" (click)="router.nav_create()">
+        <a class="nostyle" (click)="router.nav_create()">
           <i class="far" aria-hidden="true">&#xf0fe;</i>
         </a>
 
-        <a class="no-style" (click)="router.nav_stars()">
+        <a class="nostyle" (click)="router.nav_stars()">
           <i class="fas" aria-hidden="true">&#xf005;</i>
         </a>
 
-        <a class="no-style" (click)="router.nav_bookmarks()">
+        <a class="nostyle" (click)="router.nav_bookmarks()">
           <i class="fas" aria-hidden="true">&#xf02e;</i>
         </a>
 
