--- a/src/app/components/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/components/recipe/recipe-list/recipe-list.component.html
@@ -1,9 +1,9 @@
-<ul *ngIf="async" class="recipe-list no-style">
+<ul *ngIf="async" class="recipe-list nostyle">
   <li *ngFor="let recipe of recipes | async; index as i">
     <recipe-preview [recipe]="recipe"></recipe-preview>
   </li>
 </ul>
-<ul *ngIf="!async" class="recipe-list no-style">
+<ul *ngIf="!async" class="recipe-list nostyle">
   <li *ngFor="let recipe of recipes; index as i">
     <recipe-preview [recipe]="recipe"></recipe-preview>
   </li>
