--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -113,6 +113,7 @@
 
         <recipe-ingredients-list
           [(ingredients)]="recipe.langs[lang].ingredients"
+          type="write"
         ></recipe-ingredients-list>
       </div>
 
